feat: add code example to cv and styles for him

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,6 @@ h1{
     display: flex;
     margin: 0 auto;
     width: 1366px;
-    height: 1024px;;
 }
 .two_columns{
     width: 1366px;
@@ -189,4 +188,66 @@ footer{
 }
 .rs_icon{
 width: 100px;
+}
+.code_example{
+    width: 700px;
+    display: block;
+    font-size: 20px;
+    /* flex-direction: column; */
+
+}
+.title_code{
+    position: relative;
+    left: 30px;
+    width: 280px;
+    display: flex;
+    justify-content: center;
+    width: 280px;
+    height: 30px;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 24px;
+    font-variant: small-caps;
+    background-color: #D8C30E;
+}
+.link_code{
+    position: relative;
+    left: 30px;
+    width: 280px;
+    display: flex;
+    justify-content: center;
+    width: 280px;
+    height: 30px;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 24px;
+    font-variant: small-caps;
+    color: black;
+
+}
+pre{
+    position: relative;
+    left: 30px;
+    width: 500px;
+    margin: 0;
+}
+code{
+    color: white;
+    background: #131414f1;
+}
+.purple_word {
+    color: #B294BB;
+}
+.variable_orange {
+    color: #D1933F;
+}
+.variable_blue {
+    color: #89B6C5;
+}
+.green_operand {
+    color: #AEBC67;
 }
