--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
 body{
+    font-family: 'Courier New', Courier, monospace, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin:0;
 }
 h1{
@@ -48,7 +49,6 @@ h1{
     bottom: 80px;
     left: 10px;
     z-index: 3;
-    font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 50px;
@@ -64,7 +64,6 @@ h1{
     text-align: center;
     width: 280px;
     height: 30px;
-    font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 28px;
@@ -88,7 +87,6 @@ ul{
 p{
     margin-left: 10px;
     margin:0;
-    font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -120,15 +118,14 @@ p{
 
 }
 .li_skill p{
-    font-size: 24px;
-    margin-top: 25px;
+    font-size: 16px;
+    margin-top: 15px;
     color:black;
     width: 180px;
 }
 #Title_middle{
     margin-left: 20px;
     width: 800px;
-    font-family:'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 28px;
@@ -138,7 +135,6 @@ p{
 #experience{
     display: flex;
     flex-direction: column;
-    font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -150,7 +146,6 @@ p{
     text-align: center;
     width: 280px;
     height: 30px;
-    font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 28px;
@@ -167,7 +162,6 @@ p{
 #language{
     display: flex;
     flex-direction: column;
-    font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -204,7 +198,6 @@ width: 100px;
     justify-content: center;
     width: 280px;
     height: 30px;
-    font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 28px;
@@ -220,7 +213,6 @@ width: 100px;
     justify-content: center;
     width: 280px;
     height: 30px;
-    font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 28px;
