--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,8 @@
-html, body {
+body {
     height: 100%;
     margin: 0;
     padding: 0;
+    background-color: rgba(0, 0, 0, 0.582);
   }
   h1,h2{
     margin: 0;
@@ -18,7 +19,6 @@ header{
     justify-content: center;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.582);
 }
 .little{
     height: 100px;
@@ -74,31 +74,23 @@ nav{
     stroke: rgba(255, 45, 45, 0.164)
 }
 .pan{
-    position: absolute;
-    left: 10%;
-    top: 50%;
-    width:300px;
-    height: 300px;
+    width:150px;
+    height: 150px;
 }
 .hide{
     opacity: 0;
 }
-.add100{
-    height: 100%;
-}
-.add89{
-    height: 89%;
-}
+
 main{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.582);
 }
 .about{
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 100%;
     width: 700px;
 }
@@ -111,6 +103,9 @@ main{
     color: azure;
 }
 .skills{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     max-width: 1960px;
     height: 100%;
@@ -150,6 +145,7 @@ main{
 }
 .skill:hover{
     cursor: pointer;
+    background-color: #7f7f7ff1;
     transform: translateY(5px);
 }
 .edu_place{
