--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,12 @@
+html{
+    height: 100%;
+}
 body {
     height: 100%;
     margin: 0;
     padding: 0;
     background-color: rgba(0, 0, 0, 0.582);
-  }
+}
   h1,h2{
     margin: 0;
   }
@@ -18,7 +21,7 @@ header{
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 70%;
 }
 .little{
     height: 100px;
@@ -217,6 +220,48 @@ code{
     color: rgb(255, 163, 42);
     font-size: 45px;
     margin-top: 30px;
+}
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    /* left: 0;
+    bottom: 0; */
+}
+.logo_container{
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 200px;
+    height: 100px;
+}
+
+#FHamster{
+    position: absolute;
+    right: 30px;
+    top: 20px;
+    width: 30px;
+    height: 30px;
+}
+.github_container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 230px;
+    height: 100px;
+}
+.github_container img{
+    width: 50px;
+    height: 50px;
+}
+footer span, .github_container span {
+    cursor: pointer;
+    color: rgb(216, 213, 213);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
 }
 .none{
     display: none;
