--- a/CSS/style.css
+++ b/CSS/style.css
@@ -263,6 +263,9 @@ footer span, .github_container span {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
 }
+footer a{
+    width: 200px;
+}
 .none{
     display: none;
 }
