--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,15 +7,21 @@ body {
     padding: 0;
     background-color: rgba(0, 0, 0, 0.582);
 }
-  h1,h2{
+h1,h2{
     margin: 0;
-  }
-  a{
+}
+ul{
+    padding: 0;
+}
+section{
+    width: 70%;
+}
+a{
     text-decoration: none;
     color: rgb(255, 163, 42);
     font-size: 25px;
     margin-top: 10px;
-  }
+}
 header{
     display: flex;
     flex-direction: column;
@@ -95,7 +101,6 @@ main{
     flex-direction: column;
     align-items: center;
     height: 100%;
-    width: 700px;
 }
 .about h1{
     color: blanchedalmond;
@@ -116,6 +121,8 @@ main{
 .skills_wpapper{
     list-style: none;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     row-gap: 20px;
     column-gap: 30px;
